infrastructure/code-quality/deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-quality
  labels:
    name: code-quality
    purpose: code-quality-analysis
